# ai-reviewer-gitlab

./: .dockerignore  .gitignore  Dockerfile.test  Makefile  README.md  gitlab_reviewer.py  llm_client.py  main.py  pyproject.toml  repomix-output.txt  requirements.txt  review_strategies.py  sequence_diagram.puml  setup.cfg
.githooks/: pre-push
ai_reviewer/: __init__.py  __main__.py  gitlab_reviewer.py  llm_client.py  main.py  review_strategies.py
tests/: test_gitlab_reviewer.py  test_llm_client.py  test_main.py  test_review_strategies.py
