[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-reviewer-gitlab"
version = "0.1.0"
authors = [
  { name="Leon J", email="leonj2@example.com" },
]
description = "AI-powered code review tool for GitLab merge requests"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "python-gitlab>=3.0.0",
    "pyyaml>=6.0.0",
    "typing-extensions>=4.0.0"
]

[project.urls]
"Homepage" = "https://gitlab.com/leonj2-pub/ai-reviewer-gitlab"
"Bug Tracker" = "https://gitlab.com/leonj2-pub/ai-reviewer-gitlab/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
ai_reviewer = "main:main"
